trying to understand how to connect everything

--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
         </div>
     </div>
 
+    <button onclick="resetBoard()">RESET BOARD</button>
+
     <script src="script.js"></script>
 </body>
