--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <link rel='stylesheet' href='style.css'>
 </head>
 <body>
+    <input type="text" id='names' value="">
+    <button id='addPlayer'>Add Player</button>
     <div class='container'>
         <h1>Tic Tac Toe</h1>
         <div class='playarea'>
